--- a/views/airbnbResults.ejs
+++ b/views/airbnbResults.ejs
@@ -43,12 +43,20 @@
         .back-button {
             margin-bottom: 20px;
         }
+        .add-button {
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
 
     <div class="container mt-5">
         <h1>Airbnb Listings</h1>
+
+        <!-- Add Button -->
+        <div class="add-button">
+            <a href="/api/AirBnBs/add" class="btn btn-success">Add New Airbnb</a>
+        </div>
 
         <!-- Back Button -->
         <div class="back-button">
