--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,6 +87,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/api/AirBnBs/add">Add Listing</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/users/login">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/users/register">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/users/logout">Logout</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -153,6 +162,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 </body>
 </html>
