--- a/views/error.ejs
+++ b/views/error.ejs
@@ -17,7 +17,7 @@
             <% } %>
         </div>
         <div class="text-center mt-4">
-            <a href="/" class="btn btn-primary">Go Back to Home</a>
+            <a href="http://localhost:3000/api/AirBnBs/add" class="btn btn-primary">Go Back to Home</a>
         </div>
     </div>
 </body>
