--- a/views/addAirbnb.ejs
+++ b/views/addAirbnb.ejs
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="room_type" class="form-label">Room Type:</label>
-                    <input type="text" class="form-control" id="room_type" name="room_type" placeholder="Room Type" required minlength="3" maxlength="50">
+                    <input type="text" class="form-control" id="room_type" name="room_type" placeholder="Room Type">
                 </div>
             </div>
 
@@ -140,11 +140,7 @@
                         minlength: 3,
                         maxlength: 50,
                     },
-                    room_type: {
-                        required: true,
-                        minlength: 3,
-                        maxlength: 50,
-                    },
+                   
                     accommodates: {
                         required: true,
                         min: 1,
@@ -179,9 +175,7 @@
                     property_type: {
                         required: "Property type is required.",
                     },
-                    room_type: {
-                        required: "Room type is required.",
-                    },
+                   
                     accommodates: {
                         required: "Please specify the number of guests.",
                         min: "Minimum guests is 1.",
