--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,11 +57,11 @@
         }
 
         .navbar {
-            background-color: #007bff;
+            background-color: #007bff5e;
         }
 
         .navbar a {
-            color: white;
+            color: rgba(36, 32, 32, 0.152);
         }
 
         .navbar a:hover {
